<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Create contact"
        app:titleCentered="true" />

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@id/firstNameField"
        app:layout_constraintEnd_toStartOf="@id/firstNameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/firstNameField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPerson"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@id/firstNameField"
        app:layout_constraintStart_toStartOf="@id/firstNameField"
        app:layout_constraintTop_toBottomOf="@id/firstNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="@id/phoneField"
        app:layout_constraintEnd_toStartOf="@id/phoneField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/phoneField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="@id/lastNameField"
        app:layout_constraintStart_toStartOf="@id/lastNameField"
        app:layout_constraintTop_toBottomOf="@id/lastNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>