<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_details"
        app:navigationIcon="@drawable/ic_back"
        app:titleCentered="true" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:shapeAppearance="@style/circleImageView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImageView"
        tools:text="Ralph Emerson Manzano" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />

    <LinearLayout
        android:id="@+id/callButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/textButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1">

        <ImageView
            android:id="@+id/callImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/actionBarItemBackground"
            android:src="@drawable/ic_phone" />

        <TextView
            android:id="@+id/callTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/call"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/callImageView"
            app:layout_constraintStart_toStartOf="@id/callImageView"
            app:layout_constraintTop_toBottomOf="@id/callImageView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/callButton"
        app:layout_constraintTop_toBottomOf="@id/divider1">

        <ImageView
            android:id="@+id/textImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/textImageView"
            app:layout_constraintStart_toStartOf="@id/textImageView"
            app:layout_constraintTop_toBottomOf="@id/textImageView" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/callButton" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/bluegrey"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/contactInfoTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/contact_info"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/callInfoImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="@id/mobileLabelTextView"
                app:layout_constraintStart_toStartOf="@+id/contactInfoTextView"
                app:layout_constraintTop_toTopOf="@id/phoneTextView" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/callInfoImageView"
                app:layout_constraintTop_toBottomOf="@+id/contactInfoTextView"
                tools:text="09179536401" />

            <TextView
                android:id="@+id/mobileLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/mobile"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/phoneTextView"
                app:layout_constraintTop_toBottomOf="@id/phoneTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/redOrange"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>